--- a/index.html
+++ b/index.html
@@ -7,16 +7,45 @@
     <title>Dropbox</title>
 
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.1/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
+    
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;700&display=swap" rel="stylesheet">
+
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
 
     <header>
 
-        <nav></nav>
+        <nav class="row">
+
+            <ul class="nav-bar fl">
+                <li>
+                    <div class="logo-container">
+                        <img src="img/logo-small.png" alt="logo">
+                    </div>
+                </li>
+                <li><a href="#">Perchè Dropbox?</a></li>
+                <li><a href="#">Funzioni</a></li>
+                <li><a href="#">Piani e Prezzi</a></li>
+            </ul>
+
+            <div class="nav-bar fl-r">
+                <ul class="nav-bar fl">
+                    <li><a href="#">Supporto</a></li>
+                    <li><a href="#">Contatta l'ufficio vendite</a></li>
+                    <li><a href="#">Accedi</a></li>
+                    <li>
+                        <a class="button blue" href="#">Inizia</a>
+                    </li>
+                </ul>
+            </div>
+
+        </nav>
 
         <div class="jumbotron contianer-large">
-
+            
         </div>
 
     </header>
