sistemazioni in pricing

--- a/index.html
+++ b/index.html
@@ -195,7 +195,18 @@
 
             <div class="column large">
                 <div class="col-head">Team</div>
-                    <div class="col-body"></div>
+                <div class="col-body">
+                    <div class="row">
+                        <div class="text-container fl">
+                            <h3>Eterprise</h3>
+                            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. </p>
+                            <p>Recusandae architecto maiores pariatur saepe voluptas consequuntur aliquid enim magni dolores. Eum impedit ducimus laboriosam error saepe exercitationem dolorem aut nam pariatur.</p>
+                        </div>
+                        <div class="button blue fl-r">
+                            <a href="#">Contatta l'ufficio vendite</a>
+                        </div>
+                    </div>
+                </div>
             </div>
 
         </section>
