problemi con la sezione partner-finder

--- a/index.html
+++ b/index.html
@@ -211,24 +211,81 @@
 
         </section>
 
-        <section class="partner-finder row">
-
-            <div class="img-container fl"></div>
-            <div class="text-container"></div>
-            
+        <section class="partner-finder">
+            <div class="row">
+                <div class="img-container fl">
+                    <img src="img/partner.png" alt="partners">
+                </div>
+                <div class="text-container fl">
+                    <h3>Entra in contatto con un partner Dropbox</h3>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ratione aspernatur distinctio necessitatibus, error voluptatum consectetur minus quod labore veritatis, maiores obcaecati ex laboriosam tempore. Adipisci optio quidem aut fugiat voluptas?</p>
+                    <div class="button white">
+                        <a href="#">Trova un partner</a>
+                    </div>
+                </div>
+            </div>
         </section>
 
         <section class="operations">
 
             <h2>Esegui più operazioni con Dropbox Business</h2>
 
+            
             <div class="row">
 
                 <div class="item-operations fl">
-
-                    <div class="img-container fl"></div>
-                    <div class="text-container"></div>
-
+                    <div class="img-container fl">
+                        <img src="img/business-feature-send-files-it.png" alt="">
+                    </div>
+                    <div class="text-container">
+                        <h3>Passa di meno da uno strumento all'altro</h3>
+                        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Minima magni ad iusto quod maxime ea, quas quae maiores aspernatur recusandae vitae ex delectus consequuntur sequi impedit inventore laudantium similique. Possimus.</p>
+                    </div>
+                </div>
+                <div class="item-operations fl">
+                    <div class="img-container fl">
+                        <img src="img/business-feature-send-files-it.png" alt="">
+                    </div>
+                    <div class="text-container">
+                        <h3>Passa di meno da uno strumento all'altro</h3>
+                        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Minima magni ad iusto quod maxime ea, quas quae maiores aspernatur recusandae vitae ex delectus consequuntur sequi impedit inventore laudantium similique. Possimus.</p>
+                    </div>
+                </div>
+                <div class="item-operations fl">
+                    <div class="img-container fl">
+                        <img src="img/business-feature-send-files-it.png" alt="">
+                    </div>
+                    <div class="text-container">
+                        <h3>Passa di meno da uno strumento all'altro</h3>
+                        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Minima magni ad iusto quod maxime ea, quas quae maiores aspernatur recusandae vitae ex delectus consequuntur sequi impedit inventore laudantium similique. Possimus.</p>
+                    </div>
+                </div>
+                <div class="item-operations fl">
+                    <div class="img-container fl">
+                        <img src="img/business-feature-send-files-it.png" alt="">
+                    </div>
+                    <div class="text-container">
+                        <h3>Passa di meno da uno strumento all'altro</h3>
+                        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Minima magni ad iusto quod maxime ea, quas quae maiores aspernatur recusandae vitae ex delectus consequuntur sequi impedit inventore laudantium similique. Possimus.</p>
+                    </div>
+                </div>
+                <div class="item-operations fl">
+                    <div class="img-container fl">
+                        <img src="img/business-feature-send-files-it.png" alt="">
+                    </div>
+                    <div class="text-container">
+                        <h3>Passa di meno da uno strumento all'altro</h3>
+                        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Minima magni ad iusto quod maxime ea, quas quae maiores aspernatur recusandae vitae ex delectus consequuntur sequi impedit inventore laudantium similique. Possimus.</p>
+                    </div>
+                </div>
+                <div class="item-operations fl">
+                    <div class="img-container fl">
+                        <img src="img/business-feature-send-files-it.png" alt="">
+                    </div>
+                    <div class="text-container">
+                        <h3>Passa di meno da uno strumento all'altro</h3>
+                        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Minima magni ad iusto quod maxime ea, quas quae maiores aspernatur recusandae vitae ex delectus consequuntur sequi impedit inventore laudantium similique. Possimus.</p>
+                    </div>
                 </div>
             </div>
 
