partner-finder fixed - grazie ottavio

--- a/index.html
+++ b/index.html
@@ -234,7 +234,7 @@
             <div class="row">
 
                 <div class="item-operations fl">
-                    <div class="img-container fl">
+                    <div class="img-container">
                         <img src="img/business-feature-send-files-it.png" alt="">
                     </div>
                     <div class="text-container">
@@ -243,7 +243,7 @@
                     </div>
                 </div>
                 <div class="item-operations fl">
-                    <div class="img-container fl">
+                    <div class="img-container">
                         <img src="img/business-feature-send-files-it.png" alt="">
                     </div>
                     <div class="text-container">
@@ -252,7 +252,7 @@
                     </div>
                 </div>
                 <div class="item-operations fl">
-                    <div class="img-container fl">
+                    <div class="img-container">
                         <img src="img/business-feature-send-files-it.png" alt="">
                     </div>
                     <div class="text-container">
@@ -261,7 +261,7 @@
                     </div>
                 </div>
                 <div class="item-operations fl">
-                    <div class="img-container fl">
+                    <div class="img-container">
                         <img src="img/business-feature-send-files-it.png" alt="">
                     </div>
                     <div class="text-container">
@@ -270,7 +270,7 @@
                     </div>
                 </div>
                 <div class="item-operations fl">
-                    <div class="img-container fl">
+                    <div class="img-container">
                         <img src="img/business-feature-send-files-it.png" alt="">
                     </div>
                     <div class="text-container">
@@ -279,7 +279,7 @@
                     </div>
                 </div>
                 <div class="item-operations fl">
-                    <div class="img-container fl">
+                    <div class="img-container">
                         <img src="img/business-feature-send-files-it.png" alt="">
                     </div>
                     <div class="text-container">
