--- a/index.html
+++ b/index.html
@@ -370,9 +370,6 @@
     </section>
 
     <section class="faq container-small">
-        <div class="text-container">
-            
-        </div>
         <h3 class="bold">Domande frequenti</h3>
         <p class="bold">Qual'è la differenza tra Dropbox Business Standard e Dropbox Business Advanced?</p>
         <p class="bold">Qual'è la differenza tra Dropbox Business Standard e Dropbox Business Advanced?</p>
@@ -384,8 +381,49 @@
 
         <div class="container-large">
             <div class="row">
-                
+                <div class="column fl">
+                    <h3>Dropbox</h3>
+                    <p>Applicazione Desktop</p>
+                    <p>Perché Dropbox</p>
+                    <p>Piani</p>
+                    <p>Sicurezza</p>
+                    <p>Funzioni</p>
+                </div>
+                <div class="column fl">
+                    <h3>Prodotti</h3>
+                    <p>Applicazione Desktop</p>
+                    <p>Perché Dropbox</p>
+                    <p>Piani</p>
+                    <p>Sicurezza</p>
+                    <p>Funzioni</p>
+                </div>
+                <div class="column fl">
+                    <h3>Azienda</h3>
+                    <p>Applicazione Desktop</p>
+                    <p>Perché Dropbox</p>
+                    <p>Piani</p>
+                    <p>Sicurezza</p>
+                    <p>Funzioni</p>
+                </div>
+                <div class="column fl">
+                    <h3>Supporto</h3>
+                    <p>Applicazione Desktop</p>
+                    <p>Perché Dropbox</p>
+                    <p>Piani</p>
+                    <p>Sicurezza</p>
+                    <p>Funzioni</p>
+                </div>
+                <div class="column fl">
+                    <h3>Comunity</h3>
+                    <p>Applicazione Desktop</p>
+                    <p>Perché Dropbox</p>
+                    <p>Piani</p>
+                    <p>Sicurezza</p>
+                    <p>Funzioni</p>
+                </div>
             </div>
+            <hr class="short-hr">
+            <span class="language">Italiano</span>
         </div>
 
     </footer>
