partner-finder fixed

--- a/index.html
+++ b/index.html
@@ -219,7 +219,7 @@
                         <img src="img/partner.png" alt="partners">
                     </div>
                     <div class="text-container fl">
-                        <h3>Entra in contatto con un partner Dropbox</h3>
+                        <h3 class="bold">Entra in contatto con un partner Dropbox</h3>
                         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ratione aspernatur distinctio necessitatibus, error voluptatum consectetur minus quod labore veritatis, maiores obcaecati ex laboriosam tempore. Adipisci optio quidem aut fugiat voluptas?</p>
                         <div class="button white">
                             <a href="#">Trova un partner</a>
@@ -379,7 +379,7 @@
         </section>
 
     </div>
-    
+
     <footer>
 
         <div class="container-large">
